# mejla

./: .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  README.md  _typos.toml  justfile
.github/actions/setup-sccache/: action.yml
.github/workflows/: release.yml  test.yml
src/: lib.rs
src/email/: attachment.rs  email.rs  email_account.rs  email_address.rs  email_credentials.rs  email_settings.rs  email_settings_selector.rs  lettre_bridge.rs  mod.rs  smtp_server.rs  template.rs  template_part.rs
src/encryption/: aes_gcm_256.rs  aes_gcm_sealed_box.rs  encrypted_app_password.rs  encryption_key.rs  error.rs  mod.rs  pb_hkdf.rs  salt.rs
src/tui/: build_email_settings.rs  email_account.rs  email_address.rs  error.rs  mod.rs  password.rs  smtp_server.rs  template.rs  util.rs
